No pingas for sale here & separated discord sv

--- a/index.html
+++ b/index.html
@@ -21,21 +21,20 @@
 
         <div class="middle">
             <p>pingas.xyz - the place for all the pingas.</p>
-	    <p>A website born from an inside joke of a Discord server that has gone a little bit too far.</p>
+	    <p>A website born from an inside joke of a Discord server that has gone a little bit too far.</p><br>
+	    <p>« No, you won't find pingas for sale here, we'll get in trouble for that pretty quick, go out and ask your local dealer for that. »</p>
 	    <br>
 	    <a href="wireguard.html"> <p class="button">Set wireguard up</p> </a>
 	    <a href="memes.html"> <p class="button">handpicked memes</p> </a>
 	    <a href="hurrdurr.html"> <p class="button">hurrdurr</p> </a>
 	    <!-- hahaha LINE BREAK GO <BRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRR> --> <br><br><br><br><br><br><br><br><br><br><br><br><br>
-	    <marquee width="350"><blink><p style="font-size:22px;">Join our Discord server NOW!</p></marquee></blink>
-	    <!-- <a href="404.html"><img width="350" height="auto" src="index/invite.png" onmouseover="this.src='index/invitehover.png';" onmouseout="this.src='index/invite.png';" /> </a> -->
-	    <img width="350" height="auto" src="index/unavailable.png">
-	    <p>Come back later, sorry</p>
-	    <p><del>Are you a computer nerd, autistic, a degenerate or all of the above? This place is for you.</del></p>
+	    <a href="discord.html" style="color:red;"> <h3>Guess what? You can join our Discord server today!</h3> </a>
+	    <marquee><blink><p>Damn son!</p></blink></marquee>
+	    <marquee><img src=index/longpingas.png></marquee>
         </div>
 
         <div id="right" class="side">
-		<a href="https://www.youtube.com/watch?v=TOuGH9Gpeos"> <img src=index/pingaman.png> </a>
+	    <a href="https://www.youtube.com/watch?v=TOuGH9Gpeos"> <img src=index/pingaman.png> </a>
             <img src=index/president.png width="128">
 	    <a href="fuck-this-shit-im-out.html"> <img src=index/pringles.jpg width="128"> </a>
         </div>
