Yeeted Discord stuff

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="title">
 		<img style="height:64px; width:auto;" src=index/logo.png>
-		<p>The home website of the Tech Dumpster [or whatever the server is called at the moment]</p>
+		<p>The home website of everything pingas.</p>
 	</div>
 
     <div class="content">
@@ -24,11 +24,10 @@
 	    <p>A website born from an inside joke of a Discord server that has gone a little bit too far.</p><br>
 	    <p>« No, you won't find pingas for sale here, we'll get in trouble for that pretty quick, go out and ask your local dealer for that. »</p>
 	    <br>
-	    <a href="wireguard.html"> <p class="button">Set wireguard up</p> </a>
 	    <a href="memes.html"> <p class="button">handpicked memes</p> </a>
 	    <a href="hurrdurr.html"> <p class="button">hurrdurr</p> </a>
+	    <a href="wireguard.html"> <p class="button">Set wireguard up</p> </a>
 	    <!-- hahaha LINE BREAK GO <BRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRR> --> <br><br><br><br><br><br><br><br><br><br><br><br><br>
-	    <a href="discord.html" style="color:red;"> <h3>Guess what? You can join our Discord server today!</h3> </a>
 	    <marquee><blink><p>Damn son!</p></blink></marquee>
 	    <marquee><img src=index/longpingas.png></marquee>
         </div>
