No more wireguard 🦀

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	    <br>
 	    <a href="memes.html"> <p class="button">handpicked memes</p> </a>
 	    <a href="hurrdurr.html"> <p class="button">hurrdurr</p> </a>
-	    <a href="wireguard.html"> <p class="button">Set wireguard up</p> </a>
+	    <!-- <a href="wireguard.html"> <p class="button">Set wireguard up</p> </a> -->
 	    <!-- hahaha LINE BREAK GO <BRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRR> --> <br><br><br><br><br><br><br><br><br><br><br><br><br>
 	    <marquee><blink><p>Damn son!</p></blink></marquee>
 	    <marquee><img src=index/longpingas.png></marquee>
