--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <div class="middle">
             <p>pingas.xyz - the place for all the pingas.</p>
-	    <p>A website born from an inside joke of a Discord server that has gone a little bit too far.</p><br>
+	    <p>A website born from an inside joke that has gone a little bit too far.</p><br>
 	    <p>« No, you won't find pingas for sale here, we'll get in trouble for that pretty quick, go out and ask your local dealer for that. »</p>
 	    <br>
 	    <a href="memes.html"> <p class="button">handpicked memes</p> </a>
