added little explanation thingy

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	    <p>A website born from an inside joke that has gone a little bit too far.</p><br>
 	    <p>« No, you won't find pingas for sale here, we'll get in trouble for that pretty quick, go out and ask your local dealer for that. »</p>
 	    <br>
+	    <p>(Yes, at this point I just keep this site as a redirect to my own site in this form, probably until the domain ownership expires.)</p> 
 	    <a href="memes.html"> <p class="button">handpicked memes</p> </a>
 	    <a href="hurrdurr.html"> <p class="button">hurrdurr</p> </a>
 	    <!-- <a href="wireguard.html"> <p class="button">Set wireguard up</p> </a> -->
